// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android generation methods should add a sanitizer for the function with the correct name 1`] = `
Object {
  "args": Array [
    Object {
      "type": "Integer",
      "value": 4,
    },
    Object {
      "type": "Double",
      "value": 42,
    },
  ],
  "method": "scrollInDirection",
  "target": Object {
    "type": "Class",
    "value": "com.wix.detox.espresso.DetoxAction",
  },
}
`;

exports[`Android generation methods should generate type checks 1`] = `"times should be a number, but got FOO (string)"`;

exports[`Android generation methods should return adapter calls 1`] = `
Object {
  "args": Array [
    Object {
      "type": "Integer",
      "value": 3,
    },
  ],
  "method": "multiClick",
  "target": Object {
    "type": "Class",
    "value": "com.wix.detox.espresso.DetoxAction",
  },
}
`;
